<resources>
    <string name="app_name">AvaliaçãoAndroidBasico</string>
    <string name="nova_fruta">NOVA FRUTA</string>
    <string name="beneficios_da_fruta">Benefícios da Fruta</string>
    <string name="inserir_foto">INSERIR FOTO</string>
    <string name="concluir">CONCLUIR</string>
    <string name="nome_da_fruta">Nome da Fruta</string>
    <string name="edit_error">Preencha com valores reais e escolha uma foto!</string>
    <string name="descricao_da_fruta">Descrição da Fruta</string>
    <string name="frutas">FRUTAS</string>
    <string name="remover">REMOVER</string>
    <string name="fruta_selecionada">FRUTA SELECIONADA</string>
    <string name="remover_fruta">Deseja Excluir a Fruta?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cancelado">CANCELADO</string>
    <string name="resource">android.resource://</string>
    <string name="laranja">Laranja</string>
    <string name="adicionar_fruta">Adicionar Fruta</string>
    <string name="beneficio1">Diminui os níveis de colesterol ruim no organismo. Rica em vitamina C. Contém flavonoides, betacaroteno e fibras.</string>
    <string name="beneficio2">Previne as doenças cardiovasculares. Faz bem para o sistema digestivo. Melhora o humor.</string>
</resources>